tests/codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.data.empty.deriving/reader-data-empty-deriving.mon
;; TEST-ID: tests.codegen.reader-error.reader-data-empty-deriving
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: expected-fail-compiled
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/typeclass-data-layout
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: 'deriving' requires at least one typeclass
;; TEST-ATOM: atom.reader.error.reader.data.empty.deriving
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.data.empty.deriving
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: 'deriving' requires at least one typeclass
;; TEST-READER-PATH: reader.c:4924 parser.data
;; TEST-CODEGEN-PATH: diagnostic.parser.data
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:4924 'deriving' requires at least one typeclass
;; TEST-USES-ATOM: atom.reader.error.reader.data.empty.deriving
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.data
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/typeclass-data-layout/atom.reader.error.reader.data.empty.deriving
;; TEST-MENU-PATH: codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.data.empty.deriving
;; TEST-ATOM-LEAF: atom.reader.error.reader.data.empty.deriving
;; TEST-CLI-TARGET: codegen errors reader typeclass-data-layout

(module Main)
(data Color Red deriving [])
